<resources>
    <string name="app_name">TWS Transmitter</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="bluetooth_fragment_label">Bluetooth Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="position_rationale">本APP运行必须取得位置控制权限</string>
    <string name="btn_open">开启蓝牙</string>
    <string name="btn_close">关闭蓝牙</string>
    <string name="btn_search">搜索蓝牙</string>
    <string name="btn_discoverable">蓝牙可见</string>
    <string name="btn_play">播放音乐</string>
    <string name="btn_stop">停止播放</string>
</resources>